driver/tests/snap/type_error/splice_non_lifted/0_input.splic
code fn bad(x: u64) -> u64 { $(x) }
